Converted fixed values to percentages and reduced spacing between rows

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	overflow: hidden;
+	/*overflow: hidden;*/
 	background-color: #2f9bb9;
 	color: #FEFEFD;
 	
@@ -25,7 +25,7 @@ body {
 }
 
 .slogan {
-	font-size: 60px;
+	font-size: 3.5em;
   	font-weight: bold;
   	letter-spacing: -1px;
   	line-height: 1.5em;
